<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="coolcatmeow.org.welcomeanimation.ResumeActivityTwo"
    tools:showIn="@layout/activity_resume_activity_two">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TopOfResume"
        android:id="@+id/MessageTopResume2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#982525" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SchoolInfo"
        android:id="@+id/textViewSchoolInfo"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:textColor="#982525"
        android:layout_below="@+id/MessageTopResume2"
        android:layout_alignLeft="@+id/MessageTopResume2"
        android:layout_alignStart="@+id/MessageTopResume2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/SchoolName"
        android:ems="10"
        android:id="@+id/editTextSchoolName"
        android:layout_below="@+id/textViewSchoolInfo"
        android:layout_alignLeft="@+id/textViewSchoolInfo"
        android:layout_alignStart="@+id/textViewSchoolInfo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Major"
        android:ems="10"
        android:id="@+id/editTextMajor"
        android:layout_below="@+id/editTextSchoolName"
        android:layout_alignLeft="@+id/editTextSchoolName"
        android:layout_alignStart="@+id/editTextSchoolName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/WorkInfo"
        android:id="@+id/textViewWorkInfo"
        android:layout_below="@+id/editTextMajor"
        android:layout_alignLeft="@+id/editTextMajor"
        android:layout_alignStart="@+id/editTextMajor"
        android:layout_marginTop="40dp"
        android:textColor="#982525" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/CompanyName"
        android:id="@+id/editTextWorkName"
        android:layout_below="@+id/textViewWorkInfo"
        android:layout_alignLeft="@+id/textViewWorkInfo"
        android:layout_alignStart="@+id/textViewWorkInfo"
        android:layout_marginTop="49dp"
        android:layout_alignRight="@+id/editTextMajor"
        android:layout_alignEnd="@+id/editTextMajor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextWorkTittle"
        android:text="@string/WorkTittle"
        android:layout_below="@+id/editTextWorkName"
        android:layout_alignLeft="@+id/editTextWorkName"
        android:layout_alignStart="@+id/editTextWorkName"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonGoToDisplay"
        android:layout_below="@+id/editTextWorkTittle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
